# mcxn947

./: .gitmodules  CMakeLists.txt  flash.sh  mcxn947.ld
src/: main.c
